# RandomRogue

./: .gitattributes  .gitignore  AUTHORING.md  BRIDGE_COSTS.md  CMakeLists.txt  CMakePresets.json  FAMILY_ENGINES.md  MODDING.md  MUD_WORLD_BRIDGE_PLAN.md  NARRATIVE.md  PLAN.md  README.md  ROADMAP.md  SCENARIO_1000.md  WORLDGEN.md
.claude/: launch.json
.github/workflows/: build.yml
assets/data/: companions.json  events.json  items.json  quirks.json  scenario_targets.json  traits.json
assets/data/events/: afflictions.json  blitz1.json  blitz2_deep.json  blitz2_heights.json  blitz2_town.json  blitz2_wilds.json  cave.json  city.json  coast.json  company.json  connected_stories.json  convergence.json  dungeon.json  endgame.json  finale.json  forest.json  ghosts.json  gods.json  hunts.json  living.json  manifest.json  mountains.json  naval.json  politics.json  r16_conflict.json  r16_hope.json  r16_life.json  r16_material.json  r17_remaster.json  r18_living_politics.json  road.json  special.json  story_arcs.json  swamp.json  tavern.json  wideworld.json
assets/data/recipes/: items.json  language.json  prose.json
bridge/: README.md  rr.chronicle.v1.schema.json
bridge/fixtures/: wide-world-artifact-v1.json  wide-world-death-v1.json  wide-world-deed-v1.json  wide-world-ending-v1.json  wide-world-institution-v1.json  wide-world-region-v1.json
infra/: cloudflare-worker.js  wrangler.jsonc
infra/migrations/: 0001_initial.sql  0002_telemetry.sql  0003_chronicle_core.sql  0004_chronicle_delivery.sql
play/: index.html  manifest.webmanifest  random_rogue.js  random_rogue.wasm  sw.js
scripts/: balance-queries.md  env.ps1
site/: index.html
site/play/: sw.js
src/: audio.cpp  audio.h  character.h  events.cpp  events.h  game.cpp  game.h  grammar.cpp  grammar.h  history.cpp  history.h  items.cpp  items.h  language.cpp  language.h  main.cpp  rng.h  save.cpp  save.h  story.cpp  story.h  world.cpp  world.h
tools/: analyze.cpp  check_bridge.mjs  check_delivery.mjs  check_site.mjs  chronicle_dump.cpp  generate_r18.mjs  playtest.cpp  regression.cpp  remaster_legacy.mjs  scaffold.cpp  validate.cpp
web/: shell.html
